--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "main": "./dist/extension.js",
   "scripts": {
-    "build": "vite build",
-    "watch": "vite --mode development build -w"
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "devDependencies": {
     "@podman-desktop/api": "1.12.0",
     "@types/node": "^20",
-    "typescript": "5.5.4",
-    "vite": "^5.4.1"
+    "typescript": "5.5.4"
   }
 }
