chore: fix Containerfile and compiling
Fixes:
* Containerfile not building correctly
* tsconfig not setup correctly to properly build with module support, so
  it was not building correctly.
* extension.ts file not needed an extra import line

Closes: https://github.com/podman-desktop/extension-template-minimal/issues/4

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "version": "0.0.1",
   "icon": "icon.png",
   "publisher": "you",
+  "type": "module",
   "license": "Apache-2.0",
   "engines": {
-    "podman-desktop": ">=1.10.0"
+    "podman-desktop": ">=1.12.0"
   },
-  "main": "./dist/extension.js",
+  "main": "dist/extension.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
